// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Promo box component should match snapshot 1`] = `
<div>
  <article
    class="promoBox promoBoxMediumSpacing"
    data-tracking="promo-box"
  >
    <div
      class="container"
    >
      <div
        class="grid grid--loose"
      >
        <div
          class="contentContainer"
          data-component="grid-item"
          data-g="12 md:7"
        >
          <h2
            class="heading"
          >
            Mock promo box title
          </h2>
          <div
            class="body"
          >
            <div
              class="storyblokRichTextWrapper "
              data-testid="storyblok-rich-text"
            />
          </div>
        </div>
        <div
          class="mediaContainer"
          data-component="grid-item"
          data-g="12 md:5"
        >
          <div
            class="imageContainer imageContainerLandscape"
            style="background-image: url(https://placebacon.net/130/210?image=4/m/filters:quality%2880%29);"
          />
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`Promo box component should match snapshot if image is provided and set as portrait 1`] = `
<div>
  <article
    class="promoBox promoBoxMediumSpacing"
    data-tracking="promo-box"
  >
    <div
      class="container"
    >
      <div
        class="grid grid--loose"
      >
        <div
          class="contentContainer"
          data-component="grid-item"
          data-g="12 md:7"
        >
          <h2
            class="heading"
          >
            Mock promo box title
          </h2>
          <div
            class="body"
          >
            <div
              class="storyblokRichTextWrapper "
              data-testid="storyblok-rich-text"
            />
          </div>
        </div>
        <div
          class="mediaContainer"
          data-component="grid-item"
          data-g="12 md:5"
        >
          <div
            class="imageContainer imageContainerPortrait"
            style="background-image: url(https://placebacon.net/130/210?image=4/m/filters:quality%2880%29);"
          />
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`Promo box component should not render ActionBanner default or testimonials when component is card or something else 1`] = `
<div>
  <article
    class="promoBox transparent promoBoxMediumSpacing"
    data-tracking="promo-box"
  >
    <div
      class="container"
    >
      <div
        class="grid grid--loose"
      >
        <div
          class="contentContainer"
          data-component="grid-item"
          data-g="12 md:7"
        >
          <h2
            class="heading"
          >
            Mock promo box title
          </h2>
          <div
            class="body"
          >
            <div
              class="storyblokRichTextWrapper "
              data-testid="storyblok-rich-text"
            />
          </div>
        </div>
        <div
          class="mediaContainer"
          data-component="grid-item"
          data-g="12 md:5"
        >
          <div
            class="imageContainer imageContainerLandscape"
            style="background-image: url(https://placebacon.net/130/210?image=4/m/filters:quality%2880%29);"
          />
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`Promo box component should render ActionBanner default or testimonials when content passed from storyblok 1`] = `
<div>
  <article
    class="promoBox transparent promoBoxMediumSpacing"
    data-tracking="promo-box"
  >
    <div
      class="container"
    >
      <div
        class="grid grid--loose"
      >
        <div
          class="contentContainer"
          data-component="grid-item"
          data-g="12 md:7"
        >
          <h2
            class="heading"
          >
            Mock promo box title
          </h2>
          <div
            class="body"
          >
            <div
              class="storyblokRichTextWrapper "
              data-testid="storyblok-rich-text"
            />
          </div>
        </div>
        <div
          class="mediaContainer"
          data-component="grid-item"
          data-g="12 md:5"
        >
          <div
            class="imageContainer imageContainerLandscape"
            style="background-image: url(https://placebacon.net/130/210?image=4/m/filters:quality%2880%29);"
          />
        </div>
      </div>
    </div>
  </article>
</div>
`;
